# fastapi-odmantic-realworld-example

./: .env  Procfile  pyproject.toml  requirements.txt
scripts/: deploy.sh  start-mongo.sh  stop-mongo.sh
src/: api.py  settings.py
